project/styles/pokemon-type-matchup-tool.css
:root {
    /* General palette for styling */
    --tog-blue: #4464a4;
    --tog-cream: #F2ECE6;
    --tog-red: #BF3D3D;
    --tog-dark-red: #862b2b;
    --tog-black: #0F1A2A;
    --white: #ffffff;

    /* Type colors for "Effectiveness Cards"*/
    --bug: #91C12F;
    --dark: #5A5465;
    --dragon: #0B6DC3;
    --electric: #F4D23C;
    --fairy: #EC8FE6;
    --fighting: #CE416B;
    --fire: #FF9D55;
    --flying: #8FA9DE;
    --ghost: #5269AD;
    --grass: #63BC5A;
    --ground: #D97845;
    --ice: #73CEC0;
    --normal: #919AA2;
    --poison: #AA6BC8;
    --psychic: #FA7179;
    --rock: #C5B78C;
    --steel: #5A8EA2;
    --water: #5090D6;
}

* {
    background-color: var(--white);
    font-family: Lato, sans-serif;
}

@font-face {
    font-family: 'Pokemon B/W';
    src: url("../fonts/pokemon-b-w.otf.woff2/pokemon-b-w.otf.woff2") format("woff2"),
        url("../fonts/pokemon-b-w.ttf/pokemon-b-w.ttf") format("truetype");
}

body {
    max-width: 800px;
}

header {
    background-color: var(--tog-blue);
    display: grid;
    grid-template-columns: 6fr 1fr;
    grid-template-rows: auto auto;
}

.footer-paragraph {
    font-family: Lato, sans-serif;
    font-size: 0.9rem;
    text-align: center;
    background-color: var(--tog-blue);
    padding: 0.9rem;
    color: var(--tog-cream);
    margin-top: 5rem;
    margin-bottom: 0;
}

.current-year {
    background-color: var(--tog-blue);
}

h1 {
    font-size: clamp(6px, 5vw, 32px);
    color: var(--tog-cream);
    background-color: var(--tog-blue);
    padding: 1.5rem;
    white-space: nowrap;
    grid-column: 1 / 3;
    grid-row: 1 / 2;
}

nav {
    width: 100%;
    grid-column: 1 / 3;
    grid-row: 2 / 3;
}

#menu {
    background-color: var(--tog-blue);
    color: var(--tog-cream);
    font-size: 2rem;
    border: none;
    grid-column: 2 / 3;
    grid-row: 1 / 2;
}

#menu::before {
    content: "☰";
}

#menu.x::before {
    content: "X";
}

#navigation {
    display: none;
    position: absolute;
    width: 200px;
    list-style: none;
    text-align: right;
    margin-top: 0;
    padding: 0;
    right: 8px;
}

#navigation li {
    padding: 0.45rem 0;
    font-size: 20px;
    width: 100%;
    color: var(--tog-cream);
    background-color: var(--tog-red);
    white-space: pre;
}

#navigation>li>a {
    text-decoration: none;
    background-color: inherit;
    font-family: Lato, sans-serif;
    color: var(--tog-cream);
    font-size: 20px;
}

#navigation li:hover {
    background-color: var(--tog-dark-red);
    font-weight: bold;
}

.normal-div {
    margin: 1.75rem 1.25rem;
    width: 90%;
    clear: both;
}

#eighteen-types-container {
    margin: 4.5rem 0.25rem 1.75rem 0.25rem;
    display: grid;
    grid-template-rows: 1fr 2fr;
    grid-template-columns: 10fr 6fr;
    position: relative;
    max-width: 100%;
}

#eighteen-types-heading {
    position: absolute;
    top: -2rem;
}

#eighteen-types-paragraph {
    grid-row: 1 / 2;
    grid-column: 1 / 3;
}

#type-grid {
    grid-column: 1 / 2;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(60px, 100px));
    grid-template-rows: repeat(auto-fill, minmax(20px, 1fr));
    align-items: start;
    gap: 0.25rem;
    margin: -2rem 0 1.75rem 1.25rem;
    clear: both;
}

#type-grid>img {
    width: 100%;
    height: auto;
    max-height: 22px;
    max-width: 100px;
    transition: transform 0.15s ease-in-out;
}

#type-grid>img:hover {
    transform: scale(1.2);
}

#type-grid>img.selected {
    outline: 4px outset var(--tog-red);
}

#pokemon-example {
    margin: -10px 0 10px;
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    align-self: center;
}

#pokemon-pic {
    max-width: 256px;
}

figcaption {
    margin: 0;
    text-align: center;
    border: 2px solid var(--tog-blue);
    margin: 1rem;
    border-radius: 6px;
    padding: 0.5rem;
    background-color: var(--tog-cream);
}

p,
a,
figcaption {
    font-family: "Pokemon B/W";
    font-size: 1.5rem;
    margin: 1.25rem 0 1.25rem 0;
}

#navigation.open {
    display: block;
}

#calculator-form {
    background-color: var(--tog-cream);
    padding: 1rem;
    margin: 1rem;
    border: 2px solid var(--tog-blue);
    border-radius: 6px;
    width: 88%;
    min-width: 290px;
}

fieldset {
    background-color: inherit;
    margin-bottom: 1rem;
    min-width: 270px;
    width: 95%;
}

label {
    background-color: inherit;
    font-family: "Pokemon B/W";
    font-size: 1.25rem;
}

select {
    display: block;
    min-width: 245px;
    width: 70%;
    margin-bottom: 16px;
    height: 2.5rem;
}

legend {
    background-color: inherit;
    font-style: italic;
    font-size: 0.8rem;
}

select,
option {
    font-family: "Pokemon B/W";
    padding: 0.5rem 0;
    font-size: 1.5rem;
}

#calculate-button {
    font-family: Lato, sans-serif;
    margin: 1rem;
    padding: 0.5rem 0;
    min-width: 245px;
    width: 67%;
    color: var(--tog-cream);
    box-sizing: border-box;
    font-family: "Pokemon B/W";
    font-size: 1.5rem;
    background-image: linear-gradient(to top left, var(--tog-red), var(--tog-dark-red));
    border-radius: 6px;
}

#calc-results {
    display: flex;
    flex-flow: row wrap;
}

@keyframes slide-down {
    from {
        transform: translateY(-1.75rem);
    }
    to {
        transform: translateY(0);
    }
}

.effectiveness-card {
    border: 1rem solid transparent;
    /* border-image: linear-gradient(to right, var(--bug) 62%, 67%, var(--psychic) 72%) 1; */
    background-color: var(--tog-cream);
    margin: 1px;
    font-family: "Pokemon B/W";
    padding: 1rem;
    margin: 1rem;
    width: 150px;

    transition: transform 0.15s ease-in-out;
    animation: slide-down 0.25s;
}

.effectiveness-card:hover {
    transform: scale(1.1);
}

.effectiveness-card>h3,
.effectiveness-card>p,
.effectiveness-card>p>span {
    background-color: inherit;
    font-family: inherit;
}

.effectiveness-heading {
    font-size: 1.3rem;
    margin: 0 0 0.5rem 0;
}

.effectiveness-statement {
    font-size: 1.2rem;
    margin: 0;
}

.bold {
    font-family: inherit;
    font-weight: bold;
}

.table-container {
    overflow-x: auto;
}

table, th, td {
    border: 1px solid black;
    border-collapse: collapse;
}

th, td {
    padding: 0.5rem;
    max-width: 26px;
    aspect-ratio: 1/1;
    width: 5%;
}

.overall-type-header {
    font-size: 1rem;
    background-color: var(--tog-blue);
    color: var(--tog-cream);
}

.overall-type-header:hover {
    transform: none;
}

th {
    border: 2px solid black;
    text-align: center;
    font-size: 0.5rem;
    width: 5%;
    transition: transform 0.15s ease-in-out;
}

.table-reset-cell {
    background-color: var(--tog-red);
}

.table-reset-cell:hover {
    transform: none;
}

th:hover {
    transform: scale(1.3);
}

td {
    text-align: center;
    font-size: 0.75rem;
}

#table-reset-button {
    width: 35%;
    background-color: inherit;
}

#table-reset-button:hover {
    animation: rotate 2s;
    animation-iteration-count: infinite;
}

#vertical-text {
    writing-mode: vertical-lr;
    transform: rotate(-180deg);
}

.super-green {
    background-color: green;
    color: var(--white);
    font-weight: bold;
}

.notvery-red {
    background-color: #8b0000;
    color: var(--white);
    font-weight: bold;
}

.noeffect-black {
    background-color: black;
    color: var(--white);
}

.regular-white {
    background-color: var(--tog-cream);
    color: black;
}

.attack-type-cell, .defense-type-cell {
    font-family: "Pokemon B/W";
    font-size: 0.75rem;
}

@keyframes rotate {
    0% {
        transform: rotate(0deg) scale(1.35);
    }
    87.5% {
        transform: rotate(0deg) scale(1.35);
    }
    100% {
        transform: rotate(360deg) scale(1.35);
    }
}


/* Non-mobile CSS (for larger screens) below:  */
@media screen and (min-width: 640px) {
    #menu {
        display: none;
    }

    #navigation {
        position: static;
        display: flex;
        margin: 0;
        width: 100%;
        max-width: 100%;
        list-style: none;
        text-align: center;
        justify-content: flex-start;
    }

    #navigation li {
        padding: 0.45rem;
        text-decoration: none;
        font-size: 20px;
        width: 100%;
        color: var(--tog-cream);
        background-color: var(--tog-red);
        white-space: normal;
    }

    #eighteen-types-container {
        margin: 4.5rem 0.25rem 1.75rem 0.25rem;
        display: grid;
        grid-template-rows: 1fr 2fr;
        grid-template-columns: 2fr 2fr;
        position: relative;
        max-width: 100%;
    }

    #type-grid {
        width: 100%;
        max-width: 500px;
        grid-column: 1 / 2;
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(60px, 100px));
        grid-template-rows: repeat(auto-fill, minmax(20px, 1fr));
        align-items: start;
        gap: 1rem;
        margin: -2rem 0 1.75rem 1.25rem;
        clear: both;
    }

    figcaption {
        width: 250px;
    }
}

